--- a/modules/ROOT/pages/about-flows.adoc
+++ b/modules/ROOT/pages/about-flows.adoc
@@ -25,7 +25,7 @@ modified event.
 
 == Using Flows
 
-Flows can have sources (such as an HTTP listener receiving a request)
+Flows can have xref:sources-reference.adoc[Sources] (such as an HTTP listener receiving a request)
 that trigger the execution of a flow. For cases where you do not want
 a source to start a flow right away, you can configure your flow as
 initially stopped and start it later through
@@ -86,4 +86,5 @@ on some condition.
 == See Also
 
 * xref:flow-component.adoc[Flow and Subflow Scopes]
+* xref:sources-reference.adoc[Sources]
 * xref:index.adoc[Mule Runtime]
