--- a/modules/ROOT/pages/sources-reference.adoc
+++ b/modules/ROOT/pages/sources-reference.adoc
@@ -9,9 +9,9 @@ linking any external communication protocol with internal Mule processing.
 
 Examples of sources are:
 
-* HTTP:Listener
-* FILE:Inbound-endpoint
-* AMQP:Consume
+* xref:docs-connectors::http-connector.adoc[HTTP:Listener]
+* xref:docs-connectors::file-connector.adoc[FILE:Directory Listener]
+* xref:docs-connectors::amqp-connector.adoc[AMQP:Consume]
 
 == Configuring Sources
 
@@ -19,13 +19,16 @@ Even though each source implementation will have different configuration paramet
 
 === Redelivery Policy
 
-Each source can be configured with a redelivery policy. That way, an user can add some logic on how to handle messages that arrive at the source multiple times and cause exceptions.
+Each source can be configured with a redelivery policy. That way, an user can add some logic on how to handle messages that arrive at the source multiple times and cause errors.
+
+[IMPORTANT]
+Some sources implemented with the xref:docs-mule-sdk::index.adoc[Mule SDK] have their own logic for a redelivery policy. In those cases, check the documentation for the connector which that source belongs to for more information.
 
 For example:
 [source,xml]
 ----
 <http:listener path="exhaustRedelivery" config-ref="listenerConfig">
-    <redelivery-policy maxRedeliveryCount="${maxRedeliveryCount}" idExpression="#[vars.idExpression]"/>
+    <redelivery-policy maxRedeliveryCount="10" idExpression="#[payload.transaction.id]"/>
 </http:listener>
 ----
 
@@ -34,11 +37,11 @@ For example:
 [%header,cols="20a,20a,20a,60a"]
 |===
 |Field |Type |Default Value |Description
-|*Max Redelivery Count* |Number |5 |The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message
+|*Max Redelivery Count* |Number |5 |The maximum number of times a message can be redelivered and processed unsuccessfully before raising a `MULE:REDELIVERY_EXHAUSTED` error.
 |*Use Secure Hash* |Boolean |True |Whether to use a secure hash algorithm to identify a redelivered message.
 |*Message Digest Algorithm* |String |SHA-256 |The secure hashing algorithm to use.
-|*ID Expression* |Expression|- | Defines one or more expressions to use to determine when a message has been redelivered.This property may only be set if useSecureHash is false.
-|*Object Store* |String |An Object Store created by the ObjectStoreManager. Non-persistent, with an entryTtl of 300 SECONDS and an expiration interval of 6 SECONDS |The object store where the redelivery counter for each message is going to be stored. It can be a reference of a private-object-store can be created as child element.
+|*ID Expression* |Expression|- | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false.
+|*Object Store* |String |An Object Store created by the ObjectStoreManager. Non-persistent, with an entryTtl of 300 SECONDS and an expiration interval of 6 SECONDS |The object store where the redelivery counter for each message is going to be stored. It can be configured as a reference or as an inner element. See xref:connectors::object-store/object-store-connector.adoc[Object Store connector]
 |===
 
 ==== Redelivery policy functionality
@@ -67,3 +70,9 @@ Suppose that we want to log some information when a maxRedeliveryCount is reache
     </error-handler>
 </flow>
 ----
+
+== See also
+
+* xref:flow-component.adoc[Flow and Subflow Components]
+* xref:about-event-source.adoc[About Event Sources]
+* xref:about-event-processors.adoc[About event processors]
